feat: documentacao agenda service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+springdoc.swagger-ui.path=/
+spring.datasource.url=xxx
+spring.datasource.username=xxx
+spring.datasource.password=xxx
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
